polymorph sfx method cleanup

--- a/Resources/Prototypes/_Impstation/CosmicCult/polymorphs.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/polymorphs.yml
@@ -7,6 +7,7 @@
     transferName: false
     transferDamage: true
     duration: 12
+    polymorphSound: /Audio/_Impstation/CosmicCult/ability_lapse.ogg
 
 - type: polymorph
   id: CosmicLapseMobArachnid
@@ -17,6 +18,7 @@
     transferName: false
     transferDamage: true
     duration: 12
+    polymorphSound: /Audio/_Impstation/CosmicCult/ability_lapse.ogg
 
 - type: polymorph
   id: CosmicLapseMobDiona
@@ -27,6 +29,7 @@
     transferName: false
     transferDamage: true
     duration: 12
+    polymorphSound: /Audio/_Impstation/CosmicCult/ability_lapse.ogg
 
 - type: polymorph
   id: CosmicLapseMobMoth
@@ -37,6 +40,8 @@
     transferName: false
     transferDamage: true
     duration: 12
+    polymorphSound: /Audio/_Impstation/CosmicCult/ability_lapse.ogg
+
 
 - type: polymorph
   id: CosmicLapseMobVox
@@ -47,6 +52,7 @@
     transferName: false
     transferDamage: true
     duration: 12
+    polymorphSound: /Audio/_Impstation/CosmicCult/ability_lapse.ogg
 
 - type: polymorph
   id: CosmicLapseMobSnail
@@ -57,6 +63,7 @@
     transferName: false
     transferDamage: true
     duration: 12
+    polymorphSound: /Audio/_Impstation/CosmicCult/ability_lapse.ogg
 
 - type: polymorph
   id: CosmicLapseMobDecapoid
@@ -67,6 +74,7 @@
     transferName: false
     transferDamage: true
     duration: 12
+    polymorphSound: /Audio/_Impstation/CosmicCult/ability_lapse.ogg
 
 - type: entity
   categories: [ HideSpawnMenu ]
