--- a/Resources/Prototypes/_Impstation/Body/Organs/gray.yml
+++ b/Resources/Prototypes/_Impstation/Body/Organs/gray.yml
@@ -180,7 +180,7 @@
   # You're technically 'immune to poison' without a heart, but.. uhh, you'll have bigger problems on your hands.
   - type: Metabolizer
     maxReagents: 2
-    metabolizerTypes: [ Gray f]
+    metabolizerTypes: [ Human ]
     groups:
     - id: Medicine
     - id: Poison
