--- a/Resources/Prototypes/_Impstation/Objects/Misc/nullrod.yml
+++ b/Resources/Prototypes/_Impstation/Objects/Misc/nullrod.yml
@@ -31,7 +31,7 @@
   components:
   - type: ChaplainGearMenu
     possibleSets:
-    # - ChaplainGearRosary ## UNFINISHED!
+    - ChaplainGearRosary
     - ChaplainGearGrail
     - ChaplainGearGlove
     - ChaplainGearBow
@@ -61,6 +61,7 @@
   parent: NullRodBase
   description: An expensive-looking rosary, made from silver. Exudes somewhat soothing vibes. Nice!
   components:
+  - type: CleanseOnUse
   - type: Prayable
     bibleUserOnly: true
   - type: Sprite
@@ -157,7 +158,7 @@
   name: divine grasp
   id: NullRodGlove
   parent: [ NullRodBase, ClothingHandsInedibleBase]
-  description: The touch of god! Or goddess. It's up to you, really.
+  description: The touch of god! Or whatever you believe in, really. I don't think the gauntlet cares.
   components:
   - type: Sprite
     sprite: _Impstation/Objects/Misc/nullrod_glove.rsi
@@ -169,17 +170,21 @@
   - type: Clothing
     sprite: _Impstation/Objects/Misc/nullrod_glove.rsi
   - type: StaminaDamageOnHit
-    damage: 22
+    damage: 23
   - type: MeleeWeapon
     attackRate: 0.68
     damage:
       types:
-        Blunt: 10
+        Blunt: 14
     soundHit:
       path: /Audio/_Impstation/Weapons/nullglove.ogg
       params:
         variation: 0.35
     mustBeEquippedToUse: true
+  - type: MeleeThrowOnHit
+    unanchorOnHit: true
+    speed: 7
+    lifetime: 0.2
   - type: Reflect
     reflectProb: .22
     spread: 120
