Deconversion system major polish & implementation pass

--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -1099,10 +1099,10 @@
         factor: 3
     Medicine:
       effects:
-      - !type:CleanseCorruption
+      - !type:CleanseCult
         conditions:
         - !type:ReagentThreshold
-          min: 15
+          min: 20
       - !type:HealthChange
         conditions:
         - !type:TotalDamage
