--- a/Resources/Prototypes/_Impstation/CosmicCult/Effects/effects.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Effects/effects.yml
@@ -28,6 +28,9 @@
           property: Energy
           enabled: true
           reverseWhenFinished: true
+    - type: Tag
+      tags:
+      - HideContextMenu
 
 - type: entity
   categories: [ HideSpawnMenu ]
@@ -62,6 +65,9 @@
        enabled: true
        isLooped: true
        reverseWhenFinished: true
+  - type: Tag
+    tags:
+      - HideContextMenu
 
 - type: entity
   categories: [ HideSpawnMenu ]
@@ -81,6 +87,9 @@
       shader: unshaded
     netsync: false
     drawdepth: Mobs
+  - type: Tag
+    tags:
+      - HideContextMenu
 
 - type: entity
   categories: [ HideSpawnMenu ]
@@ -112,3 +121,40 @@
        enabled: true
        isLooped: true
        reverseWhenFinished: true
+  - type: Tag
+    tags:
+      - HideContextMenu
+
+- type: entity
+  categories: [ HideSpawnMenu ]
+  id: CleanseEffectVFX
+  components:
+  - type: TimedDespawn
+    lifetime: 2.025
+  - type: Sprite
+    layers:
+    - sprite: _Impstation/CosmicCult/Effects/effect_cleansevfx.rsi
+      state: vfx
+      shader: unshaded
+    netsync: false
+    drawdepth: Mobs
+  - type: PointLight
+    color: "#ffd52e"
+    radius: 1.5
+    energy: 2.5
+    castShadows: false
+  - type: LightBehaviour
+    behaviours:
+     - !type:FadeBehaviour
+       interpolate: Linear
+       minDuration: 2.025
+       maxDuration: 2.025
+       startValue: 0.1
+       endValue: 2
+       property: Energy
+       enabled: true
+       isLooped: true
+       reverseWhenFinished: true
+  - type: Tag
+    tags:
+      - HideContextMenu
