--- a/Resources/Prototypes/Catalog/thief_toolbox_sets.yml
+++ b/Resources/Prototypes/Catalog/thief_toolbox_sets.yml
@@ -65,6 +65,7 @@
   - Lighter
   - CigPackSyndicate
   - Telecrystal10 #The thief cannot use them, but it may induce communication with traitors
+  - SyndicateBusinessCard
 
 - type: thiefBackpackSet
   id: SleeperSet
